# sam3_wrapper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: download_checkpoints.sh  run.sh  setup.sh
src/sam3_wrapper/: __init__.py  download.py  inference.py  masking.py
